--- a/classes.html
+++ b/classes.html
@@ -59,11 +59,11 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
                             <a href="facility.html" class="dropdown-item">School Facilities</a>
-                            <a href="team.html" class="dropdown-item">Popular Teachers</a>
-                            <a href="call-to-action.html" class="dropdown-item">Become A Teachers</a>
-                            <a href="appointment.html" class="dropdown-item">Make Appointment</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="404.html" class="dropdown-item">404 Error</a>
+                            <a href="team.html" class="dropdown-item">Our Staff</a>
+                            <a href="call-to-action.html" class="dropdown-item">Become A Teacher</a>
+                            <a href="appointment.html" class="dropdown-item">Admission Enquiry</a>
+                            <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+                            <!-- <a href="404.html" class="dropdown-item">404 Error</a> -->
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -113,7 +113,7 @@
                                             <small>Teacher</small>
                                         </div>
                                     </div>
-                                    <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span>
+                                    <!-- <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span> -->
                                 </div>
                                 <div class="row g-1">
                                     <div class="col-4">
@@ -153,7 +153,7 @@
                                             <small>Teacher</small>
                                         </div>
                                     </div>
-                                    <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span>
+                                    <!-- <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span> -->
                                 </div>
                                 <div class="row g-1">
                                     <div class="col-4">
@@ -193,7 +193,7 @@
                                             <small>Teacher</small>
                                         </div>
                                     </div>
-                                    <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span>
+                                    <!-- <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span> -->
                                 </div>
                                 <div class="row g-1">
                                     <div class="col-4">
@@ -233,7 +233,7 @@
                                             <small>Teacher</small>
                                         </div>
                                     </div>
-                                    <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span>
+                                    <!-- <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span> -->
                                 </div>
                                 <div class="row g-1">
                                     <div class="col-4">
@@ -273,7 +273,7 @@
                                             <small>Teacher</small>
                                         </div>
                                     </div>
-                                    <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span>
+                                    <!-- <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span> -->
                                 </div>
                                 <div class="row g-1">
                                     <div class="col-4">
@@ -313,7 +313,7 @@
                                             <small>Teacher</small>
                                         </div>
                                     </div>
-                                    <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span>
+                                    <!-- <span class="bg-primary text-white rounded-pill py-2 px-3" href="">$99</span> -->
                                 </div>
                                 <div class="row g-1">
                                     <div class="col-4">
@@ -499,7 +499,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Newsletter</h3>
-                        <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                        <p>Provide your email address to hear about us first.</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                             <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
@@ -511,7 +511,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">wvischool.com</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
