--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                                <p class="mb-4">The contact form is currently inactive. Please write to info@wvischool.com</p>
                                 <form>
                                     <div class="row g-3">
                                         <div class="col-sm-6">
@@ -159,7 +159,7 @@
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                             <div class="position-relative h-100">
                                 <iframe class="position-relative rounded w-100 h-100"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54795.43877892191!2d75.81020319014908!3d30.866655487049933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391079841932391b%3A0xd0ed7a7efe4d6995!2sWELLINGTON%20VALLEY%20INTERNATIONAL%20SCHOOL!5e0!3m2!1sen!2suk!4v1647730892896!5m2!1sen!2suk"
                                 frameborder="0" style="min-height: 400px; border:0;" allowfullscreen="" aria-hidden="false"
                                 tabindex="0"></iframe>
                             </div>
