Added message from principal

--- a/index.html
+++ b/index.html
@@ -225,17 +225,26 @@
             <div class="container">
                 <div class="bg-light rounded">
                     <div class="row g-0">
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
+                        <div class="d-none col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                             <div class="position-relative h-100">
                                 <img class="position-absolute w-100 h-100 rounded" src="img/call-to-action.jpg" style="object-fit: cover;">
                             </div>
                         </div>
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="col-lg-12 wow fadeIn" data-wow-delay="0.5s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Become A Teacher</h1>
-                                <p class="mb-4">You can apply to become a teacher with us. We are hiring teachers all around the year and we not only welcome 
-                                experienced teachers but also give chance to trainee teachers. For any queries and openings, write to us directly on email: info@wvischool.com</p>
-                                <a class="btn btn-primary py-3 px-5" href="">Get Started Now<i class="fa fa-arrow-right ms-2"></i></a>
+                                <h1 class="mb-4">Message From Principal</h1>
+                                <p class="mb-4">At WVIS, our commitment to our students is embodied in our school motto - "WE ENTER TO LEARN, LEAVE TO ACHIEVE".
+                                The faculty and students of WVIS strive to reinforce this motto each and everyday.<br>WVIS provides an inspiring and dynamic educational 
+                                environment where students embrace challenge, respect, diversity and achieve their personal best.<br>Dear students, schooling is our first contact with environment which is fill of joy, happiness, competition, adjustments,sharing and learning in a formal way. At WVIS, we work for all around development of our students. Curriculum is designed in such a way that all the educational needs are fulfilled along with social, physical and cognitive development. For which our teachers follow 3 H's policy i.e Heads on, Hearts on, Hands on.
+ We know  today's competitive world leads to frustration and stress many times.School has taken initiative in this direction by starting meditation and other co- curricular activities to channelise energy in a positive way.
+It is my proud privilege to be the principal of WVIS, which is well equipped with all kinds of resources for imparting good education to aspiring students.
+We look forward to welcoming you to the amazing environment which is WVIS.
+<br><br>With warm wishes and God's blessings.
+<br><br>
+REETU SHARMA<br>
+M.Sc(Phy), M.Ed<br>
+PRINCIPAL</p>
+                               <!--  <a class="btn btn-primary py-3 px-5" href="">Get Started Now<i class="fa fa-arrow-right ms-2"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -616,7 +625,7 @@
 
 
         <!-- Testimonial Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5 d-none">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Our Clients Say!</h1>
