changed principal message and changed user picture

--- a/index.html
+++ b/index.html
@@ -233,17 +233,18 @@
                         <div class="col-lg-12 wow fadeIn" data-wow-delay="0.5s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
                                 <h1 class="mb-4">Message From Principal</h1>
-                                <p class="mb-4">At WVIS, our commitment to our students is embodied in our school motto - "WE ENTER TO LEARN, LEAVE TO ACHIEVE".
-                                The faculty and students of WVIS strive to reinforce this motto each and everyday.<br>WVIS provides an inspiring and dynamic educational 
-                                environment where students embrace challenge, respect, diversity and achieve their personal best.<br>Dear students, schooling is our first contact with environment which is fill of joy, happiness, competition, adjustments,sharing and learning in a formal way. At WVIS, we work for all around development of our students. Curriculum is designed in such a way that all the educational needs are fulfilled along with social, physical and cognitive development. For which our teachers follow 3 H's policy i.e Heads on, Hearts on, Hands on.
- We know  today's competitive world leads to frustration and stress many times.School has taken initiative in this direction by starting meditation and other co- curricular activities to channelise energy in a positive way.
-It is my proud privilege to be the principal of WVIS, which is well equipped with all kinds of resources for imparting good education to aspiring students.
-We look forward to welcoming you to the amazing environment which is WVIS.
-<br><br>With warm wishes and God's blessings.
-<br><br>
-REETU SHARMA<br>
-M.Sc(Phy), M.Ed<br>
-PRINCIPAL</p>
+                                <p class="mb-4">Never be afraid to try something new.
+Remember amerteurs built the 'ask' but professionals built the Titar. Educated students are capable of leaving achieving & growing!
+AT WVIS we enter to create decision- making processes that facilitate student, family and staff Empowerment, WVIS provide education and opportunities to enable families to be actively involved in their children's acedemic and school life.
+<br><br>WVIS commitments towards our students<br><br>
+1. Meet the needs of individual students.<br>
+2. Actively contribute to the profession.<br>
+3. Use the curriculum responsibly.<br>
+4. Commit to being lifelong learner. <br><br>
+So we welcome students from the first day of school to the last, your education is a major part for us.
+So whether you're looking for the perfect graduation caption or trying to figure out what to write in a "YEAR BOOK", WVIS will help you find the right words.
+Let us remember:- One book, One pen ,One child and teacher can change the world.
+<br><br></p>
                                <!--  <a class="btn btn-primary py-3 px-5" href="">Get Started Now<i class="fa fa-arrow-right ms-2"></i></a> -->
                             </div>
                         </div>
@@ -568,7 +569,7 @@ PRINCIPAL</p>
 
 
         <!-- Team Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5 d-none">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Popular Teachers</h1>
